--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Chris Judkins 
-email: chrisjudkins@me.com
-description: >- # this means to ignore newlines until "baseurl:"
+email: mail@cjudkins.com
+#description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
@@ -31,7 +31,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
-plugins:
+#plugins:
 
 # Exclude from processing.
 # The following items will not be processed, by default.
