--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@
 
 title: Chris Judkins 
 email: mail@cjudkins.com
-description: >- # this means to ignore newlines until "baseurl:"
-Visual Effects Artist
+description: "" # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
