--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
+- jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
