--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
+minima:
+  skin: dark
 #remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
