--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #github_username:  jekyll
 
 # Build settings
-theme: minima
+#theme: minima
 minima:
   skin: dark
-#remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
 
