--- a/_config.yml
+++ b/_config.yml
@@ -27,12 +27,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #github_username:  jekyll
 
 # Build settings
-#theme: minima
-#minima:
-#  skin: dark
-remote_theme: pages-themes/midnight@v0.2.0
+theme: minima
+minima:
+  skin: dark
 plugins:
-- jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
