--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #github_username:  jekyll
 
 # Build settings
-theme: minima
+#theme: minima
+remote-theme: jekyll/minima
 minima:
   skin: dark
 plugins:
