Update github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ on:
 
 jobs:
   converttopdf:
-    name: Build PDF
+    name: Markdown to PDF and HTML
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: baileyjm02/markdown-to-pdf@v1
+      - uses: baileyjm02/markdown-to-pdf@v1.2.0
         with:
           input_path: resume.md
-          output_dir: pdfs
+          output_dir: docs
           images_dir: docs/images
           # for example <img src="./images/file-name.png">
           image_import: ./images
