--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,23 +30,23 @@ jobs:
         with:
           name: cjudkins-resume 
           path: cjudkins-resume.pdf
-      name: Create Release                                # (4)
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-      - name: Upload Release Asset                          # (5)
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+      - name: Create Release                                # (4)
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./cjudkins-resume.pdf
-          asset_name: cjudkins-resume.pdf
-          asset_content_type: application/pdf
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset                          # (5)
+          id: upload-release-asset
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: ./cjudkins-resume.pdf
+            asset_name: cjudkins-resume.pdf
+            asset_content_type: application/pdf
