--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,13 @@ description: ""
 # As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/). 
 # If you want to use the latest Minima version on GitHub Pages, use the following setting and 
 # add a line comment on "theme: minima" above.
-remote_theme: jekyll/minima
+#remote_theme: jekyll/minima
+remote_theme: pages-themes/minimal@v0.2.0
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Theme-specific settings
 
